[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daid_core"
version = "1.0.0"
authors = [
    {name = "DAID Project", email = "daid@example.com"},
]
description = "Python bindings for DAID (Distributed Agent Identifier) provenance system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
daid-cli = "daid_core.cli:main"

[project.urls]
Homepage = "https://github.com/bretbouchard/daid_core"
Repository = "https://github.com/bretbouchard/daid_core"
Documentation = "https://bretbouchard.github.io/daid_core"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
daid_core = ["py.typed"]

# PEP 627: Modern entry points configuration
[project.entry-points."daid.cli"]
daid = "daid_core.cli:main"

[project.entry-points."daid.generators"]
standard = "daid_core.generator:StandardGenerator"
unified = "daid_core.generator:UnifiedGenerator"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=daid_core --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true